chore: add openai api key environment variable

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -3,3 +3,5 @@ PORT = YOUR_BACKEND_PORT
 DATABASE_URL = "mysql://USER:PASSWORD@HOST:PORT/DATABASE_NAME?connection_limit=5?charset=utf8mb4"
 
 JWT_SECRET = "YOUR_JWT_SECRET_KEY"
+
+OPENAI_API_KEY = "YOUR_OPENAI_API_KEY"
