--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,7 +26,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "openai": "^4.86.1"
   },
   "author": "Codex-Utma",
   "license": "ISC"
