dics: add bcrypt salt environment variable

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -5,3 +5,5 @@ DATABASE_URL = "mysql://USER:PASSWORD@HOST:PORT/DATABASE_NAME?connection_limit=5
 JWT_SECRET = "YOUR_JWT_SECRET_KEY"
 
 OPENAI_API_KEY = "YOUR_OPENAI_API_KEY"
+
+BCRYPT_SALT = 10
