--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,6 +1,6 @@
 PORT = YOUR_BACKEND_PORT
 
-DATABASE_URL = "mysql://USER:PASSWORD@HOST:PORT/DATABASE_NAME?connection_limit=5?charset=utf8mb4"
+DATABASE_URL = "mysql://USER:PASSWORD@HOST:PORT/DATABASE_NAME?connection_limit=5"
 
 JWT_SECRET = "YOUR_JWT_SECRET_KEY"
 
